Issue #174: review comments
